test: add tests for auth, UserProfile and UserDAO